# cmake_template

./: .gitlab-ci.yml  CMakeLists.txt  Jenkinsfile  readme.md
.github/workflows/: cmake-multi-platform.yml
app/: CMakeLists.txt
app/src/: main.cpp
doxyDocs/: CMakeLists.txt  Doxyfile.in
lib/: CMakeLists.txt
lib/src/: dummy.cpp
lib/src/lib/: dummy.hpp
tests/: AddTest.cmake  CMakeLists.txt  example.cpp
